--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.7.0
   firebase_auth: ^5.3.2
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
