--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/login.png
+    - assets/conference.jpg
+    - assets/hackathon.png
+    - assets/party.jpg
+    - assets/workshop.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
