--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/login.png
+    - assets/login2.jpg
     - assets/conference.jpg
     - assets/hackathon.png
     - assets/party.jpg
